--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,6 +6,20 @@
   font-size: 30px !important;
 }
 
-.search-bar {
+/* .search-bar {
   width: 350px;
+} */
+
+
+.image-holder {
+  padding-top: 1.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  max-width: 900px;
+  margin: auto;
+}
+
+.recommended-books {
+  width: 90px !important;
+  cursor: pointer;
 }
