Created a more info page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,14 +24,6 @@
   height: 220px !important;
 }
 
-.results-container {
-
+.more-info-image {
+  width: 200px;
 }
-
-.results-container > .results-books {
-
-}
-
-/* p {
-  margin-bottom: 0 !important;
-} */
