--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,8 +46,8 @@ li {
 }
 
 .checkout-image {
-  width: 115px;
-  height: 190px !important;
+  width: 110px;
+  height: 185px !important;
 }
 
 .wishlist-text {
@@ -56,11 +56,6 @@ li {
 
 .wishlist {
   max-width: 1000px !important;
-}
-
-.wishlist-image {
-  width: 128px;
-  height: 180px !important;
 }
 
 .seal {
@@ -77,6 +72,10 @@ a {
 
 .chart-author {
   font-size: 18px;
+}
+
+.navbar {
+  min-height: 109px;
 }
 
 .lds-default {
