if a book is already in wishlist then wishlist button is removed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,11 @@
 .cart-icon {
   font-size: 30px !important;
 }
+
+.hidden {
+  display: none;
+}
+
 .banner-holder {
   padding-top: 1.5rem;
   padding-left: 0.5rem;
