--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,15 +11,29 @@
 }
 
 .banner-left-container {
-  width: 40%;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.banner-right-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-button {
+  padding: 0.325rem .75rem;
+  border-radius: .1875rem;
 }
 
 .homepage-banner-container {
   width: 80%;
-  height: 200px;
+  height: 275px;
   margin: auto;
   background-color: bisque;
-  padding-top: 1rem;
   margin-top: 3rem;
   box-sizing: border-box;
 }
@@ -27,15 +41,21 @@
 .homepage-banner {
   height: 100%;
   display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-.banner-text-container {
-  padding-left: 2rem;
+.banner-right-container {
+  padding-top: 4rem;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .homepage-image {
-  width: 600px;
+  width: 100%;
   height: 100%;
+  max-height: 180px;
   margin: auto;
 }
 
@@ -224,6 +244,28 @@ a {
   }
 }
 
+@media screen and (min-width:1500px) {
+
+  .banner-title {
+    font-size: 40px;
+  }
+
+  .banner-paragraph {
+    font-size: 18px;
+  }
+
+  .banner-button {
+    padding: 0.625rem 1.5rem;
+    border-radius: .1875rem;
+  }
+
+  .banner-right-container {
+    width: 100%;
+    position: relative;
+  }
+
+}
+
 
 @media screen and (min-width:767px) {
 
@@ -242,7 +284,6 @@ a {
       height: 200px;
       margin: auto;
       background-color: bisque;
-      padding-top: 1rem;
       margin-top: 3rem;
       box-sizing: border-box;
     }
@@ -250,10 +291,12 @@ a {
     .homepage-banner {
       height: 100%;
       display: flex;
+      flex-direction: row;
     }
 
-    .banner-text-container {
-      padding-left: 2rem;
+    .banner-right-container {
+      width: 55%;
+      position: relative;
     }
 
     .homepage-image {
@@ -262,4 +305,12 @@ a {
       margin: auto;
     }
 
+}
+
+
+@media screen and (min-width:500px) {
+
+  .homepage-banner-container {
+      height: 250px;
+    }
 }
