--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,16 +89,26 @@
 }
 
 .row-title {
-  padding-left: 0rem;
+  margin-left: 5%;
+}
+
+.left-arrow {
+  display: none;
+}
+
+.right-arrow {
+  display: none;
 }
 
 .horizontal-media-scroller {
   display: grid;
+  width: 90%;
+  margin: auto;
   padding-inline: 1ex;
   padding-block-end: 0.5rem;
   grid-auto-flow: column;
-  grid-auto-columns: 225px;
-  gap: 0rem;
+  grid-auto-columns: 200px;
+  gap: 0.5rem;
   overflow-x: auto;
   scroll-snap-type: x proximity;
   /* scroll-padding-inline-start: 2rem; */
@@ -108,6 +118,7 @@
 .horizontal-media-scroller > figure {
   scroll-snap-align: start;
   display: grid;
+  inline-size: 200px;
   gap: 0rem;
   margin: 0;
   text-align: center;
@@ -119,9 +130,9 @@
 
 figure > picture {
   display: inline-block;
-  inline-size: 175px;
-  max-height: 275px;
-  block-size: 275px;
+  inline-size: 200px;
+  max-height: 300px;
+  block-size: 300px;
   border-radius: 1ex;
   text-align: center;
   overflow: hidden;
@@ -392,6 +403,27 @@ a {
       height: 100%;
       margin: auto;
     }
+
+
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  left: 0.5%;
+  font-size: 33px;
+  display: block;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  right: 0.5%;
+  font-size: 33px;
+  display: block;
+}
+
+.horizontal-media-scroller {
+  overflow-x: hidden;
+}
 
 }
 
