--- a/client/src/App.css
+++ b/client/src/App.css
@@ -156,8 +156,7 @@ figure > figcaption {
 
 .homepage-second-banner {
   display: flex;
-  width: 90%;
-  /* height: auto; */
+  width: 91%;
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -179,15 +178,12 @@ figure > figcaption {
 
 .trending-image-container {
   box-sizing: border-box;
-  width: 100%;
-    position: relative;
-      overflow: hidden;
+  width: 90%;
 }
 
 .trending-image {
-width: 100%;
+  width: 100%;
   height: 100%;
-  object-fit:cover;
 }
 
 .trending-button {
@@ -453,6 +449,11 @@ a {
 
 .horizontal-media-scroller {
   overflow-x: hidden;
+}
+
+.trending-banner {
+  text-align: center;
+  padding:2rem 0;
 }
 
 }
