--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,18 @@
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
+.app-container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+}
 
 .heart-icon {
   font-size: 30px !important;
@@ -14,6 +28,12 @@
 
 .pointer-finger:hover {
   cursor: pointer;
+}
+
+.footer-position {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-container {
