--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,14 @@ body {
   min-height: 100vh;
 }
 
+.underline {
+  text-decoration: none !important;
+}
+
+.underline:hover {
+  text-decoration: underline !important;
+}
+
 .app-container {
   min-height: 100vh;
   display: flex;
@@ -46,7 +54,7 @@ body {
 }
 
 .footer-title {
-  color: black;
+  color: white;
 }
 
 .footer-title:hover {
