changed the dimensions to create a max width for content on homepage and reduced width of authors to appear more centered

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,12 @@ body {
   display: none;
 }
 
+.max {
+  max-width: 92.5%;
+  margin: 0 auto;
+
+}
+
 .dark-purple-button {
   background-color: #714361;
   color: white;
@@ -139,7 +145,7 @@ body {
 }
 
 .each-author {
-  min-width: 200px;
+  min-width: 175px;
 }
 
 .row-title {
