--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,7 +168,7 @@ body {
   padding-block-end: 0.5rem;
   grid-auto-flow: column;
   grid-auto-columns: 150px;
-  gap: 0.5rem;
+  gap: 1rem;
   overflow-x: auto;
   scroll-snap-type: x proximity;
 }
@@ -402,7 +402,7 @@ a {
   position: absolute;
   width: 6px;
   height: 6px;
-  background: #fff;
+  background:#617143;
   border-radius: 50%;
   animation: lds-default 1.2s linear infinite;
 }
