revamped layout for my wishlist page and how each book will appear

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,6 @@ body {
 .max {
   max-width: 92.5%;
   margin: 0 auto;
-
 }
 
 .dark-purple-button {
@@ -292,10 +291,20 @@ li {
 
 .wishlist-image {
   cursor: pointer;
+  width: 150px;
+  height: 220px;
 }
 
 .wishlist {
   max-width: 1000px !important;
+}
+
+.wishlist-button {
+  padding: 0.6rem 0;
+}
+
+.wishlist-description {
+  width: 80%;
 }
 
 .hover-button {
@@ -583,6 +592,12 @@ a {
 .trending-banner {
   text-align: center;
   padding:2rem 0;
+}
+
+.wishlist-image {
+  cursor: pointer;
+  width: 150px;
+  height: 240px;
 }
 
 }
