provided labels for every form input with a required asterick

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -379,6 +379,10 @@ li {
   margin: auto;
 }
 
+.required-asterick {
+  color: red;
+}
+
 .payment-accordian-container {
   width: 95%;
   display: flex;
